--- a/vpn/index.html
+++ b/vpn/index.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!DOCTYPE html> 
+<html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-20YHHF4D48"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-20YHHF4D48');
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NCMMF9VJ');</script>
-<!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VPN — 글로벌 잠금해제</title>
-  <meta name="description" content="글로벌 잠금해제?! NordVPN으로 국가 제한 없이 더 넓어진 인터넷 세상 경험하기." />
+  <title>VPN — Unlock the World</title>
+  <meta name="description" content="Break free from borders. Stream, browse, and explore without limits — all with NordVPN." />
 
   <!-- Google Fonts: Jua -->
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -34,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       margin:0;
       background:var(--bg);
       color:var(--text);
-      font-family:'Jua', sans-serif; /* 👈 귀여운 Jua 폰트 적용 */
+      font-family:'Jua', sans-serif;
       line-height:1.65
     }
     .container{max-width:860px;margin:0 auto;padding:20px}
@@ -60,80 +44,63 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </style>
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCMMF9VJ"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   <div class="container">
     <header>
-      <h1>글로벌 잠금해제?!</h1>
-      <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">지금 바로 잠금해제</a>
+      <h1>Unlock the World</h1>
+      <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Get Instant Access</a>
     </header>
 
     <div class="card">
-      <p>살면서 진짜 도움되는 꿀팁 알려드릴게요.</p>
-      <p>이것만 알아도 자유가 두 배, 인생에 즐거움이 두 배가 됩니다.</p>
+      <p>Imagine having the entire internet — every movie, every site, every experience — right at your fingertips.</p>
+      <p>With NordVPN, you can break free from digital borders and explore without limits.</p>
 
-      <div class="lead">우리나라는 인터넷 검열이 생각보다 심한 나라인데요,</div>
+      <div class="lead">Millions are already streaming, shopping, and connecting securely from anywhere. Don’t get left behind.</div>
 
-      <p>전세계에 딱 우리나라와 중국, 딱2개 국가에만 막혀있는 게임도 많고</p>
-      <p>각종 시청각자료..도 불합리한 이유로 한국ip만 차단되어 있는 경우도 많지요.</p>
-
-      <h2>국가 제한, 한 번에 넘기기</h2>
+      <h2>Why Limit Yourself?</h2>
       <p>
-        <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">nordVPN</a>은 온라인 상에서 국가 제한이 걸려있는​
-        모든 서비스를 이용하게 해주는 어플입니다.
+        <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">NordVPN</a> lets you access any service or website blocked in your country — instantly and securely.
       </p>
-      <p>이는 넷플릭스를 비롯한 여러 사이트에서 더 볼 수 있는 것들이 많아지죠.</p>
+      <p>Watch the latest shows, access exclusive sites, and experience the web without restrictions.</p>
 
       <div class="card grid-2">
         <div>
-          <h2>예시 ① 넷플릭스 지역 변경</h2>
-          <p>​예를 들어, 한국 넷플릭스에서 검색해도 나오지 않는</p>
-          <p>​일본의 명탐정 코난 전 시즌이나 영국의 해리포터 시리즈 등은</p>
-          <p>
-            ​<a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">노드VPN</a>을 이용하면 클릭 한 번만으로 접속 국가를 바꿔
-            일본 넷플릭스, 영국 넷플릭스 서버에서 바로 시청할 수 있습니다.
-          </p>
+          <h2>Example ① Unlock Netflix Worldwide</h2>
+          <p>Stream content only available abroad — from Japan’s full Detective Conan series to the UK’s Harry Potter films — all with one click.</p>
         </div>
         <div>
-          <h2>예시 ② 더 다양해지는 시청거리</h2>
-          <p>​이 밖에도 엄청나게 볼거리가 다양해져요!</p>
-          <p>​아 물론 여러분이 좋아하는 por..포르.. 포르투갈 ip로도 인터넷에 접속할 수 있죠.;;</p>
+          <h2>Example ② Open Up Your World</h2>
+          <p>Access content libraries from dozens of countries. Even connect POR..Por.. Portugal if you want. You know..!!!— the choice is yours.</p>
         </div>
       </div>
 
-      <h2>P2E 게임 접근</h2>
-      <p>관치행정, 탁상행정 때문에</p>
-      <p>한국ip는 막혀있는 P2E (Play to Earn, 블록체인 결합 게임. 게임하면서 돈 버는 메이플스토리N 등)도 즐길 수 있구요.</p>
-      <p>왜 우리나라 사람만 소외되는데!!</p>
+      <h2>Go Where Others Can’t</h2>
+      <p>Connect to restricted countries like China and browse as if you were a local.</p>
 
       <div class="hr"></div>
 
-      <h2>NordVPN</h2>
-      <p>​노드vpn은 업계 최상급 속도를 자랑하며</p>
-      <p>성가신 팝업창도 차단해주고, 개인정보 또한 보호해 주는 기능도 있습니다.</p>
+      <h2>Why NordVPN?</h2>
+      <p>Lightning-fast speeds, powerful security, and built-in ad blocking — all in one simple app.</p>
 
       <div class="card">
-        <h2>가격 & 혜택</h2>
+        <h2>Special Offer — Limited Time</h2>
         <p>
-          지금 아래 추천 링크를 통해 가입하시면 무려 <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">특별 할인가 최대 70% 할인</a>을 적용 받아
-          한달에 <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">4,000원 대</a>에 이용하실 수 있습니다.
+          Join today and get up to <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">70% OFF</a>.  
+          That’s just <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">$3/month</a> to unlock the entire internet.
         </p>
 
         <div class="btn-row">
-          <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">할인 받고 시작하기</a>
-          <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">공식 프로모션 자세히 보기</a>
+          <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Claim Your Discount</a>
+          <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">View Official Promo</a>
         </div>
 
-        <p class="note">커피 한 잔의 가격으로 10개의 기기까지 이용 가능하며 30일 내 환불 보장을 하기 때문에 잠깐 찍먹만 하는 용으로 한 달을 무료 사용하실 수 있습니다</p>
+        <p class="note">Protect up to 10 devices for the price of a coffee. Try it risk-free with our 30-day money-back guarantee.</p>
       </div>
 
-      <p>​더 넓어진 세상을 만나 인터넷을 제대로 활용해 보세요</p>
-      <p class="ok">지금 바로 지구 잠금해제하기</p>
+      <p>Don’t settle for a smaller internet. Take control and see it all.</p>
+      <p class="ok">Click below and start your global journey today.</p>
 
       <div class="footer-cta">
-        <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">NordVPN으로 잠금해제</a>
+        <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Unlock with NordVPN</a>
       </div>
     </div>
   </div>
