--- a/index.html
+++ b/index.html
@@ -266,6 +266,16 @@ function shareSite() {
 
     <p class="sr-only" id="status" aria-live="assertive"></p>
   </div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ec629106d819ccf2bda1ce97153afebe',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ec629106d819ccf2bda1ce97153afebe/invoke.js"></script>
 
   <!-- ===== Game script: original logic unchanged (only text localized) ===== -->
   <script>
