--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:title" content="2048 Global! Can you beat it?">
 <meta property="og:description" content="2048 Global! Can you beat it?">
 <meta property="og:url" content="https://www.2048global.com">
-<meta property="og:image" content="https://Kaia-Token-Creator.github.io/2048global/og-image.png">
+<meta property="og:image" content="https://2048global.com/og-image.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
@@ -29,7 +29,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="2048 Global! Can you beat it?">
 <meta name="twitter:description" content="2048 Global! Can you beat it?">
-<meta name="twitter:image" content="https://Kaia-Token-Creator.github.io/2048global/og-image.png">
+<meta name="twitter:image" content="2048global.com/og-image.jpg">
 
 <!-- Favicon / App Icon -->
 <link rel="icon" href="/favicon.ico">
@@ -197,7 +197,11 @@
     <!-- ===== Top notice (plain text + blue link) ===== -->
     <div class="top-block" aria-label="How to use">
       <p class="top-main">
-        Make 2048. Use arrow keys or swipe!<br>Think your friends can beat it? Share it!
+        Make 2048. Use arrow keys or swipe! <p class="top-link">
+        <a href="/vpn/index.html" target="_blank" rel="noopener">
+          $2048 on Solana
+        </a>
+      </p><br>Think your friends can beat it? Share it!
         <button onclick="shareSite()" style="background:none;border:none;cursor:pointer;padding:0;">
           <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png"
                alt="Share" width="16" height="16">
