--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       margin: 0 0 6px;
       font-weight: 700;
       color: #000; /* black */
-      font-size: clamp(16px, 3.8vw, 20px);
+      font-size: clamp(13px, 3.2vw, 14px);
       letter-spacing: 0.1px;
     }
     .top-link {
@@ -196,10 +196,11 @@
   <div id="app" role="application" aria-label="2048 Game">
     <!-- ===== Top notice (plain text + blue link) ===== -->
     <div class="top-block" aria-label="How to use">
-      <p class="top-main">
-<a href="/sol/index.html" target="_blank" rel="noopener">
-        Make 2048. Use arrow keys or swipe! $2048 on Solana
-   </a>
+      <p class="top-main" style="color: #000; font-family: 'Montserrat', sans-serif;">
+  Make 2048. Use arrow keys or swipe! 
+  <a href="/sol/index.html" target="_blank" rel="noopener" style="color: #000; text-decoration: none;">
+    $2048 on SOLANA
+  </a>
       </p><br>Think your friends can beat it? Share it!
         <button onclick="shareSite()" style="background:none;border:none;cursor:pointer;padding:0;">
           <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png"
