--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <a href="/sol/index.html" target="_blank" rel="noopener" style="color: #000; text-decoration: none;">
     $2048 on SOLANA
   </a>
-      </p><br>Think your friends can beat it? Share it!
+      </p><B>Think your friends can beat it? Share it!
         <button onclick="shareSite()" style="background:none;border:none;cursor:pointer;padding:0;">
           <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png"
                alt="Share" width="16" height="16">
