--- a/sol/index.html
+++ b/sol/index.html
@@ -89,7 +89,7 @@
   <div class="container">
     <h1>2048 Global on Solana</h1>
     <p>CA: Coming Soon</p><br>
-<B>Tokenomics : 70% of the ad revenue generated from 2048global.com will be used to buy back & burn $2048.<br>
+<B>Tokenomics : 70% of the ad revenue generated from<br> <a href="https://2048glob.com" target="_blank">2048global.com</a><br> will be used to buy back & burn $2048.<br>
 So, Holders!<br>
 Invite your friends and Spread this game across the globe!!!
 
