--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global</title>
-<meta name="description" content="2048 Global! Can you beat it?">
+  <title>2048 Global Web version</title>
+<meta name="description" content="Can you beat it? 2048 Global web version">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website">
@@ -230,6 +230,29 @@ function shareSite() {
   }
 }
 </script>
+<!-- 언어 선택 드롭다운 -->
+  <select aria-label="Language" onchange="goLang(this.value)"
+          style="padding:6px 8px;border:1px solid #ddd;border-radius:6px;background:#fff;">
+    <option value="" selected disabled>Language</option>
+    <option value="https://www.2048global.com">Englinsh</option>
+    <option value="/CN/index.html">中文</option>
+    <option value="/ES/index.html">Español</option>
+    <option value="/JA/index.html">日本語</option>
+    <option value="/FR/index.html">Français</option>
+    <option value="/IT/index.html">Italiano</option>
+    <option value="/NL/index.html">Nederlands</option>
+    <option value="/PT/index.html">Português</option>
+    <option value="/HI/index.html">हिन्दी</option>
+    <option value="/AR/index.html">العربية</option>
+    <option value="/BN/index.html">বাংলা</option>
+    <option value="/RU/index.html">Русский</option>
+    <option value="/ID/index.html">Bahasa Indonesia</option>
+    <option value="/VI/index.html">Tiếng Việt</option>
+    <option value="/TH/index.html">ไทย</option>
+    <option value="/MYA/index.html">မြန်မာ</option>
+  </select>
+</div>
+	
       </p>
       <p class="top-link">
         <a href="/vpn/index.html" target="_blank" rel="noopener">
