--- a/CN/vpn/index.html
+++ b/CN/vpn/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="en">
+<html lang="zh-CN">
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9891583086388017"
      crossorigin="anonymous"></script>
@@ -9,13 +9,12 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-F00NF909N7');
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VPN — Unlock the World</title>
-  <meta name="description" content="Break free from borders. Stream, browse, and explore without limits — all with NordVPN." />
+  <title>VPN — 打开全球互联网</title>
+  <meta name="description" content="突破边界，自由浏览与观看。使用 NordVPN，无限制畅享全球网络。" />
 
   <!-- Google Fonts: Jua -->
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -67,61 +66,61 @@
 <script type="text/javascript" src="//www.highperformanceformat.com/ec629106d819ccf2bda1ce97153afebe/invoke.js"></script>
   <div class="container">
     <header>
-      <h1>Unlock the World</h1>
-      <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Get Instant Access</a>
+      <h1>打开全球互联网</h1>
+      <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">立即获取</a>
     </header>
 
     <div class="card">
-      <p>Imagine having the entire internet — every movie, every site, every experience — right at your fingertips.</p>
-      <p>With NordVPN, you can break free from digital borders and explore without limits.</p>
+      <p>想象一下，整个互联网——所有电影、所有网站、所有体验——尽在掌握之中。</p>
+      <p>使用 NordVPN，你可以突破数字边界，自由探索，无限制畅享。</p>
 
-      <div class="lead">Millions are already streaming, shopping, and connecting securely from anywhere. Don’t get left behind.</div>
+      <div class="lead">数百万用户已经在全球范围内安全地观看、购物和交流。不要落后。</div>
 
-      <h2>Why Limit Yourself?</h2>
+      <h2>为什么要限制自己？</h2>
       <p>
-        <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">NordVPN</a> lets you access any service or website blocked in your country — instantly and securely.
+        <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">NordVPN</a> 让你可以即时、安全地访问你所在国家被封锁的任何服务或网站。
       </p>
-      <p>Watch the latest shows, access exclusive sites, and experience the web without restrictions.</p>
+      <p>观看最新的节目，访问专属网站，畅享无界限的互联网体验。</p>
 
       <div class="card grid-2">
         <div>
-          <h2>Example ① Unlock Netflix Worldwide</h2>
-          <p>Stream content only available abroad — from Japan’s full Detective Conan series to the UK’s Harry Potter films — all with one click.</p>
+          <h2>示例 ① 解锁全球 Netflix</h2>
+          <p>流播海外独家内容——从日本的《名侦探柯南》全集到英国的《哈利·波特》系列电影——只需一键。</p>
         </div>
         <div>
-          <h2>Example ② Open Up Your World</h2>
-          <p>Access content libraries from dozens of countries. Even connect POR..Por.. Portugal if you want. You know..!!!— the choice is yours.</p>
+          <h2>示例 ② 打开你的世界</h2>
+          <p>访问来自数十个国家的内容库。甚至可以连接到葡萄牙……选择权在你！</p>
         </div>
       </div>
 
-      <h2>Go Where Others Can’t</h2>
-      <p>Connect to restricted countries like China and browse as if you were a local.</p>
+      <h2>去别人去不了的地方</h2>
+      <p>连接到限制严格的国家（如中国），像当地人一样自由浏览。</p>
 
       <div class="hr"></div>
 
-      <h2>Why NordVPN?</h2>
-      <p>Lightning-fast speeds, powerful security, and built-in ad blocking — all in one simple app.</p>
+      <h2>为什么选择 NordVPN？</h2>
+      <p>极速连接、强大安全、内置广告拦截——尽在一个简洁的应用中。</p>
 
       <div class="card">
-        <h2>Special Offer — Limited Time</h2>
+        <h2>特别优惠 — 限时</h2>
         <p>
-          Join today and get up to <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">70% OFF</a>.  
-          That’s just <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">$3/month</a> to unlock the entire internet.
+          立即加入可享受高达 <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">70% 折扣</a>。  
+          每月只需 <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">$3</a> 即可解锁整个互联网。
         </p>
 
         <div class="btn-row">
-          <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Claim Your Discount</a>
-          <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">View Official Promo</a>
+          <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">领取折扣</a>
+          <a class="inline" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">查看官方优惠</a>
         </div>
 
-        <p class="note">Protect up to 10 devices for the price of a coffee. Try it risk-free with our 30-day money-back guarantee.</p>
+        <p class="note">一个价格即可保护多达 10 台设备。30 天退款保证，零风险体验。</p>
       </div>
 
-      <p>Don’t settle for a smaller internet. Take control and see it all.</p>
-      <p class="ok">Click below and start your global journey today.</p>
+      <p>不要满足于一个受限的互联网。掌控一切，畅览全球。</p>
+      <p class="ok">点击下方按钮，立即开启你的全球之旅。</p>
 
       <div class="footer-cta">
-        <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">Unlock with NordVPN</a>
+        <a class="cta" href="https://go.nordvpn.net/aff_c?offer_id=476&aff_id=86956" target="_blank" rel="noopener">立即解锁 NordVPN</a>
       </div>
     </div>
   </div>
