--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global Web version</title>
-<meta name="description" content="Can you beat it? 2048 Global web version">
+  <title>2048 Global Web version game</title>
+<meta name="description" content="Can you beat it? 2048 Global web version game">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="2048 Global">
-<meta property="og:title" content="2048 Global! Can you beat it?">
-<meta property="og:description" content="2048 Global! Can you beat it?">
+<meta property="og:site_name" content="2048 Global game">
+<meta property="og:title" content="2048 Global game! Can you beat it?">
+<meta property="og:description" content="2048 Global game! Can you beat it?">
 <meta property="og:url" content="https://www.2048global.com">
 <meta property="og:image" content="https://2048global.com/og-image.jpg">
 <meta property="og:image:width" content="1200">
@@ -29,8 +29,8 @@
 
 <!-- X(Twitter) Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="2048 Global! Can you beat it?">
-<meta name="twitter:description" content="2048 Global! Can you beat it?">
+<meta name="twitter:title" content="2048 Global game! Can you beat it?">
+<meta name="twitter:description" content="2048 Global game! Can you beat it?">
 <meta name="twitter:image" content="2048global.com/og-image.jpg">
 
 <!-- Favicon / App Icon -->
