--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       <option value="https://www.2048global.com">Englinsh</option>
       <option value="/CN/index.html">中文</option>
       <option value="/ES/index.html">Español</option>
+      <option value="/KR/index.html">한국어</option>
       <option value="/JA/index.html">日本語</option>
       <option value="/FR/index.html">Français</option>
       <option value="/IT/index.html">Italiano</option>
