--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
     2048 global web game
   </div>
 
+ <!-- 로고/타이틀2 -->
+  <a href="/textart/index.html" 
+     style="font-weight:bold;color:pink;text-decoration:none;">
+    TXT ART
+  </a>
+
   <!-- 언어 선택 드롭다운 -->
   <nav>
     <select aria-label="Language" onchange="goLang(this.value)"
